--- a/index.html
+++ b/index.html
@@ -13,19 +13,25 @@
       <!-- section1 -->
       <section id="section1">
         <div class="row">
-          <div class="col-xs-12 uno">
-
+          <div class="col-xs-4 uno">
           </div>
-
+          <div class="col-xs-8 uno">
+          </div>
         </div>
 
       </section>
 
 
       <!-- section2 -->
-      <section>
+      <section id="section2">
+        <div class="row">
+          <div class="col-xs-12 due">
+
+          </div>
+        </div>
 
       </section>
+
 
 
       <!-- section3 -->
