--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           </div>
           <div class="col-xs-8 uno">
           </div>
+          <div class="clearfix visible-xs-block"></div>
         </div>
-
       </section>
 
 
@@ -26,17 +26,18 @@
       <section id="section2">
         <div class="row">
           <div class="col-xs-12 due">
-
           </div>
         </div>
-
       </section>
 
 
 
       <!-- section3 -->
-      <section>
-
+      <section id="section3">
+        <div class="row">
+          <div class="col-xs-12 treup">
+          </div>
+        </div>
       </section>
 
 
