--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <!-- section3 -->
       <section id="section3">
         <div class="row">
+          <!-- colonna sopra -->
           <div class="col-xs-12 treup">
           </div>
         </div>
@@ -42,8 +43,21 @@
 
 
       <!-- section4 -->
-      <section>
-
+      <section id="section4">
+        <div class="row row-no-gutters">
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 tre">
+          </div>
+          <div class="col-xs-12 col-sm-2 col-md-4 col-lg-4 tre">
+          </div>
+          <div class="col-xs-12 col-sm-2 col-md-4 col-lg-4 tre">
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 tre">
+          </div>
+          <div class="col-xs-12 col-sm-2 col-md-4 col-lg-4 tre">
+          </div>
+          <div class="col-xs-12 col-sm-2 col-md-4 col-lg-4 tre">
+          </div>
+        </div>
       </section>
 
 
