--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
         </div>
       </section>
 
+      <!-- section6 -->
+      <section id="section6">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 seiup">
+          </div>
 
+        </div>
+      </section>
 
 
     </div>
