--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <!-- section4 -->
       <section id="section4">
-        <div class="row row-no-gutters">
+        <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
           </div>
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
@@ -72,6 +72,7 @@
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 cinqueside">
           </div>
           <div class="col-xs-12 cinquebottom">
+            FREE DOWNLOAD
           </div>
         </div>
       </section>
@@ -80,6 +81,13 @@
       <section id="section6">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 seiup">
+            CONTACT ME
+          </div>
+
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sei">
+            NAME-SEND
           </div>
 
         </div>
