--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div class="row">
           <!-- colonna sopra -->
           <div class="col-xs-12 treup">
+            PORTFOLIO
           </div>
         </div>
       </section>
@@ -65,11 +66,14 @@
         <div class="row">
           <!-- colonna about -->
           <div class="col-xs-12 cinqueup">
+            ABOUT
           </div>
           <!-- colonne di about -->
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 cinqueside">
+            PARAGRAFO SINISTRA
           </div>
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 cinqueside">
+            PARAGRAFO DESTRA
           </div>
           <div class="col-xs-12 cinquebottom">
             FREE DOWNLOAD
