--- a/index.html
+++ b/index.html
@@ -11,41 +11,37 @@
 
 
       <!-- section1 -->
-      <section id="section1">
-        <div class="row">
+      <section id="section1" class="row">
+
           <div class="col-xs-4 uno">
           </div>
           <div class="col-xs-8 uno">
           </div>
           <div class="clearfix visible-xs-block"></div>
-        </div>
+
       </section>
 
 
       <!-- section2 -->
-      <section id="section2">
-        <div class="row">
+      <section id="section2" class="row">
           <div class="col-xs-12 due">
           </div>
-        </div>
       </section>
 
 
 
       <!-- section3 -->
-      <section id="section3">
-        <div class="row">
+      <section id="section3" class="row">
           <!-- colonna sopra -->
           <div class="col-xs-12 treup">
             PORTFOLIO
           </div>
-        </div>
       </section>
 
 
       <!-- section4 -->
-      <section id="section4">
-        <div class="row">
+      <section id="section4" class="row">
+
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
           </div>
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
@@ -58,12 +54,11 @@
           </div>
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
           </div>
-        </div>
+
       </section>
 
       <!-- section5 -->
-      <section id="section5">
-        <div class="row">
+      <section id="section5" class="row">
           <!-- colonna about -->
           <div class="col-xs-12 cinqueup">
             ABOUT
@@ -78,11 +73,10 @@
           <div class="col-xs-12 cinquebottom">
             FREE DOWNLOAD
           </div>
-        </div>
       </section>
 
       <!-- section6 -->
-      <section id="section6">
+
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 seiup">
             CONTACT ME
@@ -95,8 +89,20 @@
           </div>
 
         </div>
-      </section>
 
+      <!-- section7 -->
+      <section id="section3" class="row">
+          <!-- colonna sopra -->
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sette">
+            PORTFOLIO
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sette">
+            PORTFOLIO
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sette">
+            PORTFOLIO
+          </div>
+      </section>
 
     </div>
 
