--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
       <!-- section7 -->
-      <section id="section3" class="row">
+      <section id="section7" class="row">
           <!-- colonna sopra -->
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sette">
             PORTFOLIO
@@ -101,6 +101,14 @@
           </div>
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sette">
             PORTFOLIO
+          </div>
+      </section>
+
+      <!-- section8 -->
+      <section id="section8" class="row">
+          <!-- colonna sopra -->
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 otto">
+            COPYRIGHT
           </div>
       </section>
 
