--- a/index.html
+++ b/index.html
@@ -11,57 +11,57 @@
   <body>
     <div class="container-fluid">
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
-
       <!-- section1 -->
-      <!-- <section id="section1" class="row">
+      <section id="section1" class="row">
 
-          <div class="col-xs-12 uno">
 
-          </div>
+
+
+            <nav class="navbar navbar-default">
+
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+              </div>
+
+            </nav>
+
+
+
           <div class="clearfix visible-xs-block"></div>
 
-      </section> -->
+      </section>
 
 
 
       <!-- section2 -->
       <section id="section2" class="row">
-          <div class="col-xs-12 due">
+          <div class="col-xs-12">
+            <div class="due">
+              <div class="row">
+                <div class="text-center">
+                  <img id="avatar" src="img/avataaars.svg" alt="">
+              </div>
+
+
+              <div class="row">
+                <div class="due2">
+                <div class="col-xs-12">
+                  <div class="gnd">
+                    <h1>START BOOTSTRAP</h1>
+                    <hr>
+                    <p>Graphic Artist - Web Designer - Illustrator</p>
+                  </div>
+                </div>
+              </div>
+
+            </div>
           </div>
       </section>
 
@@ -70,8 +70,10 @@
       <!-- section3 -->
       <section id="section3" class="row">
           <!-- colonna sopra -->
-          <div class="col-xs-12 treup">
-            PORTFOLIO
+          <div class="col-xs-12">
+            <div class="treup">
+              PORTFOLIO
+            </div>
           </div>
       </section>
 
