--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
     <meta charset="utf-8">
     <title></title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="container-fluid">
 
-      <!-- section1 -->
+      <!-- section1 NAV BOOTSTRAP-->
       <section id="section1" class="row">
 
 
@@ -40,7 +40,7 @@
 
 
 
-      <!-- section2 -->
+      <!-- section2 icona START BOOTSTRAP -->
       <section id="section2" class="row">
           <div class="col-xs-12">
             <div class="due">
@@ -52,12 +52,13 @@
 
               <div class="row">
                 <div class="due2">
-                <div class="col-xs-12">
-                  <div class="gnd">
+                 <div class="col-xs-12">
+                   <div class="gnd">
                     <h1>START BOOTSTRAP</h1>
                     <hr>
                     <p>Graphic Artist - Web Designer - Illustrator</p>
-                  </div>
+                   </div>
+                 </div>
                 </div>
               </div>
 
@@ -67,12 +68,13 @@
 
 
 
-      <!-- section3 -->
+      <!-- section3 PORTFOLIO -->
       <section id="section3" class="row">
           <!-- colonna sopra -->
           <div class="col-xs-12">
             <div class="treup">
-              PORTFOLIO
+              <h1>PORTFOLIO</h1>
+              <hr>
             </div>
           </div>
       </section>
@@ -81,17 +83,35 @@
       <!-- section4 -->
       <section id="section4" class="row">
 
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="text-center">
+              <img id="cabin" src="img/cabin.png" alt="">
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="text-center">
+              <img id="cabin" src="img/cake.png" alt="">
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="text-center">
+              <img id="cabin" src="img/circus.png" alt="">
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="text-center">
+              <img id="cabin" src="img/game.png" alt="">
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="text-center">
+              <img id="cabin" src="img/safe.png" alt="">
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 tre">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="text-center">
+              <img id="cabin" src="img/submarine.png" alt="">
+            </div>
           </div>
 
       </section>
