--- a/index.html
+++ b/index.html
@@ -119,15 +119,22 @@
       <!-- section5 -->
       <section id="section5" class="row">
           <!-- colonna about -->
-          <div class="col-xs-12 cinqueup">
-            ABOUT
+          <div class="col-xs-12">
+            <div class="treup">
+              <h1>ABOUT</h1>
+              <hr>
+            </div>
           </div>
           <!-- colonne di about -->
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 cinqueside">
-            PARAGRAFO SINISTRA
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="cinquesidelft">
+            Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 cinqueside">
-            PARAGRAFO DESTRA
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="cinquesiderght">
+            You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
+            </div>
           </div>
           <div class="col-xs-12 cinquebottom">
             FREE DOWNLOAD
