--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
               <div class="row">
                 <div class="text-center">
                   <img id="avatar" src="img/avataaars.svg" alt="">
+                </div>  
               </div>
 
 
