--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-default nomargin">
 
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
@@ -28,6 +28,7 @@
                   <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+                <span>BLABLA</span>
               </div>
 
             </nav>
@@ -47,7 +48,7 @@
               <div class="row">
                 <div class="text-center">
                   <img id="avatar" src="img/avataaars.svg" alt="">
-                </div>  
+                </div>
               </div>
 
 
@@ -81,7 +82,7 @@
       </section>
 
 
-      <!-- section4 -->
+      <!-- section4 IMMAGINI PORTFOLIO -->
       <section id="section4" class="row">
 
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
@@ -117,7 +118,7 @@
 
       </section>
 
-      <!-- section5 -->
+      <!-- section5 ABOUT-->
       <section id="section5" class="row">
           <!-- colonna about -->
           <div class="col-xs-12">
@@ -137,8 +138,15 @@
             You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
             </div>
           </div>
-          <div class="col-xs-12 cinquebottom">
-            FREE DOWNLOAD
+          <div class="col-xs-12">
+            <div class="cinquebottom">
+              <p class="ms_button">
+                <a class="btn btn-primary btn-lg" href="#" role="button"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+                  <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+                  </svg> Free Download!</a>
+              </p>
+            </div>
           </div>
       </section>
 
