--- a/index.html
+++ b/index.html
@@ -17,21 +17,45 @@
 
 
 
-            <nav class="navbar navbar-default nomargin">
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+          </div>
 
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">START BOOTSTRAP</a>
-                <span>BLABLA</span>
-              </div>
-
-            </nav>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+              <li><a href="#">Link</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+          </nav>
 
 
 
@@ -150,40 +174,100 @@
           </div>
       </section>
 
-      <!-- section6 -->
+      <!-- section6 CONTACT ME-->
 
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 seiup">
-            CONTACT ME
+      <section id="section6" class="row">
+          <!-- colonna about -->
+          <div class="col-xs-12">
+            <div class="treup">
+              <h1>CONTACT ME</h1>
+              <hr>
+            </div>
           </div>
 
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sei">
-            NAME-SEND
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="sei">
+              <form>
+                <div class="form-row">
+
+                  <div class="col">
+                    <div class="ms_formbox">
+                        <input type="text" class="form-control ms_formsize" placeholder="Name">
+                    </div>
+                  </div>
+
+                  <div class="col">
+                    <div class="ms_formbox">
+                        <input type="text" class="form-control ms_formsize" placeholder="Email Address">
+                    </div>
+                  </div>
+
+                  <div class="col">
+                    <div class="ms_formbox">
+                        <input type="text" class="form-control ms_formsize" placeholder="Phone Number">
+                    </div>
+                  </div>
+
+                  <div class="col">
+                    <div class="ms_formbox">
+                        <input type="text" class="form-control ms_formsize" placeholder="Message">
+                    </div>
+                  </div>
+
+                </div>
+              </form>
+
+              <br>
+              <br>
+              <p class="ms_button">
+              <a class="btn btn-primary btn-lg" href="#" role="button">Send</a>
+              </p>
+            </div>
           </div>
 
         </div>
 
-      <!-- section7 -->
+      <!-- section7 INFO -->
       <section id="section7" class="row">
           <!-- colonna sopra -->
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sette">
-            PORTFOLIO
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="sette1">
+              LOCATION
+              <br>
+              2215 John Daniel Drive
+              <br>
+              Clark, MO 65243
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sette">
-            PORTFOLIO
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class=" sette2">
+              AROUND THE WEB
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 sette">
-            PORTFOLIO
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class=" sette3">
+              ABOUT FREELANCER
+              <br>
+              Freelance is a free to use, MIT
+              <br>
+              licensed Bootstrap theme created <body>
+              <br>
+              Start Bootstrap.
+              </body>
+            </div>
           </div>
       </section>
 
       <!-- section8 -->
       <section id="section8" class="row">
           <!-- colonna sopra -->
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 otto">
-            COPYRIGHT
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="otto">
+              Copyright your Website
+            </div>
+
           </div>
       </section>
 
