--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="container-fluid">
+
+    <div class="container-fluid ms_nopadding">
 
       <!-- section1 NAV BOOTSTRAP-->
       <section id="section1" class="row">
