--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+            <!-- <ul class="nav navbar-nav">
               <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
               <li><a href="#">Link</a></li>
               <li class="dropdown">
@@ -48,11 +48,11 @@
                   <li><a href="#">One more separated link</a></li>
                 </ul>
               </li>
-            </ul>
+            </ul> -->
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -141,136 +141,136 @@
             </div>
           </div>
 
-      </section>
+            </section>
 
-      <!-- section5 ABOUT-->
-      <section id="section5" class="row">
-          <!-- colonna about -->
-          <div class="col-xs-12">
-            <div class="treup">
-              <h1>ABOUT</h1>
-              <hr>
-            </div>
-          </div>
-          <!-- colonne di about -->
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <div class="cinquesidelft">
-            Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <div class="cinquesiderght">
-            You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
-            </div>
-          </div>
-          <div class="col-xs-12">
-            <div class="cinquebottom">
-              <p class="ms_button">
-                <a class="btn btn-primary btn-lg" href="#" role="button"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
-                  <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
-                  </svg> Free Download!</a>
-              </p>
-            </div>
-          </div>
-      </section>
-
-      <!-- section6 CONTACT ME-->
-
-      <section id="section6" class="row">
-          <!-- colonna about -->
-          <div class="col-xs-12">
-            <div class="treup">
-              <h1>CONTACT ME</h1>
-              <hr>
-            </div>
-          </div>
-
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="sei">
-              <form>
-                <div class="form-row">
-
-                  <div class="col">
-                    <div class="ms_formbox">
-                        <input type="text" class="form-control ms_formsize" placeholder="Name">
-                    </div>
+            <!-- section5 ABOUT-->
+            <section id="section5" class="row">
+                <!-- colonna about -->
+                <div class="col-xs-12">
+                  <div class="treup">
+                    <h1>ABOUT</h1>
+                    <hr>
                   </div>
-
-                  <div class="col">
-                    <div class="ms_formbox">
-                        <input type="text" class="form-control ms_formsize" placeholder="Email Address">
-                    </div>
+                </div>
+                <!-- colonne di about -->
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                  <div class="cinquesidelft">
+                  Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
                   </div>
-
-                  <div class="col">
-                    <div class="ms_formbox">
-                        <input type="text" class="form-control ms_formsize" placeholder="Phone Number">
-                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                  <div class="cinquesiderght">
+                  You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
                   </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="cinquebottom">
+                    <p class="ms_button">
+                      <a class="btn btn-primary btn-lg" href="#" role="button"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+                        <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+                        </svg> Free Download!</a>
+                    </p>
+                  </div>
+                </div>
+            </section>
 
-                  <div class="col">
-                    <div class="ms_formbox">
-                        <input type="text" class="form-control ms_formsize" placeholder="Message">
-                    </div>
+            <!-- section6 CONTACT ME-->
+            <section id="section6" class="row">
+                <!-- colonna contact me -->
+                <div class="col-xs-12">
+                  <div class="treup">
+                    <h1>CONTACT ME</h1>
+                    <hr>
+                  </div>
+                </div>
+
+
+              <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                  <div class="sei">
+                    <form>
+                      <div class="form-row">
+
+                        <div class="col">
+                          <div class="ms_formbox">
+                              <input type="text" class="form-control ms_formsize" placeholder="Name">
+                          </div>
+                        </div>
+
+                        <div class="col">
+                          <div class="ms_formbox">
+                              <input type="text" class="form-control ms_formsize" placeholder="Email Address">
+                          </div>
+                        </div>
+
+                        <div class="col">
+                          <div class="ms_formbox">
+                              <input type="text" class="form-control ms_formsize" placeholder="Phone Number">
+                          </div>
+                        </div>
+
+                        <div class="col">
+                          <div class="ms_formbox">
+                              <input type="text" class="form-control ms_formsize" placeholder="Message">
+                          </div>
+                        </div>
+
+                      </div>
+                    </form>
+
+                    <br>
+                    <br>
+                    <p class="ms_button">
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Send</a>
+                    </p>
+                  </div>
+                </div>
+
+              </div>
+            </section>
+
+            <!-- section7 INFO -->
+            <section id="section7" class="row">
+                <!-- colonna sopra -->
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                  <div class="sette1">
+                    LOCATION
+                    <br>
+                    2215 John Daniel Drive
+                    <br>
+                    Clark, MO 65243
+                  </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                  <div class=" sette2">
+                    AROUND THE WEB
+                  </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                  <div class=" sette3">
+                    ABOUT FREELANCER
+                    <br>
+                    Freelance is a free to use, MIT
+                    <br>
+                    licensed Bootstrap theme created <body>
+                    <br>
+                    Start Bootstrap.
+                    </body>
+                  </div>
+                </div>
+            </section>
+
+            <!-- section8 -->
+            <section id="section8" class="row">
+                <!-- colonna sopra -->
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                  <div class="otto">
+                    Copyright your Website
                   </div>
 
                 </div>
-              </form>
-
-              <br>
-              <br>
-              <p class="ms_button">
-              <a class="btn btn-primary btn-lg" href="#" role="button">Send</a>
-              </p>
-            </div>
-          </div>
-
-        </div>
-
-      <!-- section7 INFO -->
-      <section id="section7" class="row">
-          <!-- colonna sopra -->
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="sette1">
-              LOCATION
-              <br>
-              2215 John Daniel Drive
-              <br>
-              Clark, MO 65243
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class=" sette2">
-              AROUND THE WEB
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class=" sette3">
-              ABOUT FREELANCER
-              <br>
-              Freelance is a free to use, MIT
-              <br>
-              licensed Bootstrap theme created <body>
-              <br>
-              Start Bootstrap.
-              </body>
-            </div>
-          </div>
-      </section>
-
-      <!-- section8 -->
-      <section id="section8" class="row">
-          <!-- colonna sopra -->
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="otto">
-              Copyright your Website
-            </div>
-
-          </div>
-      </section>
+            </section>
 
     </div>
 
