--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <div class="container-fluid ms_nopadding">
+    <div class="container-fluid">
 
       <!-- section1 NAV BOOTSTRAP-->
       <section id="section1" class="row">
@@ -183,51 +183,54 @@
                     <h1>CONTACT ME</h1>
                     <hr>
                   </div>
-                </div>
 
+                  <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                      <div class="sei">
+                        <form>
+                          <div class="form-row">
 
-              <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                  <div class="sei">
-                    <form>
-                      <div class="form-row">
+                            <div class="col">
+                              <div class="ms_formbox">
+                                  <input type="text" class="form-control ms_formsize" placeholder="Name">
+                              </div>
+                            </div>
 
-                        <div class="col">
-                          <div class="ms_formbox">
-                              <input type="text" class="form-control ms_formsize" placeholder="Name">
+                            <div class="col">
+                              <div class="ms_formbox">
+                                  <input type="text" class="form-control ms_formsize" placeholder="Email Address">
+                              </div>
+                            </div>
+
+                            <div class="col">
+                              <div class="ms_formbox">
+                                  <input type="text" class="form-control ms_formsize" placeholder="Phone Number">
+                              </div>
+                            </div>
+
+                            <div class="col">
+                              <div class="ms_formbox">
+                                  <input type="text" class="form-control ms_formsize" placeholder="Message">
+                              </div>
+                            </div>
+
                           </div>
-                        </div>
+                        </form>
 
-                        <div class="col">
-                          <div class="ms_formbox">
-                              <input type="text" class="form-control ms_formsize" placeholder="Email Address">
-                          </div>
-                        </div>
-
-                        <div class="col">
-                          <div class="ms_formbox">
-                              <input type="text" class="form-control ms_formsize" placeholder="Phone Number">
-                          </div>
-                        </div>
-
-                        <div class="col">
-                          <div class="ms_formbox">
-                              <input type="text" class="form-control ms_formsize" placeholder="Message">
-                          </div>
-                        </div>
-
+                        <br>
+                        <br>
+                        <p class="ms_button">
+                        <a class="btn btn-primary btn-lg" href="#" role="button">Send</a>
+                        </p>
                       </div>
-                    </form>
+                    </div>
 
-                    <br>
-                    <br>
-                    <p class="ms_button">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Send</a>
-                    </p>
                   </div>
+
                 </div>
 
-              </div>
+
+
             </section>
 
             <!-- section7 INFO -->
