--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">START BOOTSTRAP</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -50,9 +50,9 @@
               </li>
             </ul> -->
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#">PORTFOLIO</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">CONTACT</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -100,7 +100,7 @@
           <!-- colonna sopra -->
           <div class="col-xs-12">
             <div class="treup">
-              <h1>PORTFOLIO</h1>
+              <h1 id="ms_portfolio">PORTFOLIO</h1>
               <hr>
             </div>
           </div>
@@ -148,7 +148,7 @@
                 <!-- colonna about -->
                 <div class="col-xs-12">
                   <div class="treup">
-                    <h1>ABOUT</h1>
+                    <h1 id="ms_about">ABOUT</h1>
                     <hr>
                   </div>
                 </div>
