--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <!-- colonna contact me -->
                 <div class="col-xs-12">
                   <div class="treup">
-                    <h1>CONTACT ME</h1>
+                    <h1 id="ms_contact">CONTACT ME</h1>
                     <hr>
                   </div>
 
